--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <img src =https://s3.amazonaws.com/ironboard-learn/lion.jpg alt= "el kityy">
 
+<img src =https://s3.amazonaws.com/ironboard-learn/lion.jpg alt= "el kitty" title= "gato!">
 
 </body>
 </html>
